Wed Jul 27 12:24:17 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/uninstaller.rb:  Add missing require and update
	  messaging to avoid confusion with uninstall --format-executable.
	  [Ruby 1.9 - Bug #4062]

Wed Jul 27 09:34:24 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems 1.8.6.1.

Wed Jul 27 09:27:59 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* test/openssl/test_pkcs12.rb: Add test and intermediate certificates.
	  [ Ruby 1.9 - Feature #3793 ] [ruby-core:32088]

Wed Jul 27 01:05:32 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval_error.c (rb_print_undef_str): new function to raise
	  NameError for undefined method.

	* load.c (rb_mod_autoload_p), object.c (rb_mod_const_get),
	  variable.c (rb_f_untrace_var, set_const_visibility), vm_method.c
	  (rb_mod_{remove,undef,alias}_method, set_method_visibility):
	  remove inadvertent symbol creation.  based on the first patch by
	  Jeremy Evans at [ruby-core:38447].  [Feature #5089]

	* vm_method.c (obj_respond_to): fix the respond_to_missing? override
	  case.  based on the patch by Jeremy Evans at [ruby-core:38417].
	  [Feature #5072]

	* parse.y (rb_check_id): make the given name a symbol or a string.
	  based on the second patch by Jeremy Evans at [ruby-core:38447]

Wed Jul 27 00:50:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/lib/bigdecimal/util.rb (Rational#to_d):
	  zero or negative precision is error.  fixes #5098.
	  [ruby-dev:44210]

	* test/bigdecimal/test_bigdecimal_util.rb: add test for the above
	  change.

Wed Jul 27 00:48:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/lib/bigdecimal/util.rb (Float#to_d): modified for
	  specifying precision.  fixes #5098.  [ruby-dev:44210]

	* test/bigdecimal/test_bigdecimal_util.rb: add test for the above
	  change.

Wed Jul 27 00:45:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/lib/bigdecimal/util.rb (Integer#to_d): added